solve dark mode background

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,6 +3,9 @@
 @tailwind utilities;
 
 @layer base {
+  body{
+    @apply bg-white dark:bg-gray-800;
+  }
   /* h1 {
     @apply text-2xl font-bold mb-3 pb-10 font-serif;
   } */
